Task 6 and 7: Implement Pagination/Search and Redis Caching